  * Use of language files
  * Added minimap to briefmenu
  * Fixed, selection for agents killed during gameplay is not possible now
  * Added information about killed during mission to Debrief menu
  * When agent is killed during mission he will be removed from agents list
  * Added description to mission brief in 3 more languages
  * Z checking for inRange checking

Fixed Bugs
----------
  * 3005295 : The tax rate for the region cannot be altered by player
  * 3031032 : Rewrite animation generation procedures
  * 3272545 : Team button not selected when clicking on inventory item

Features added
----------
  * 3043686 : Game time
  * 3072653 : Use libsyndicate data info
  * 3086469 : Tax influence on countries status
  * 3081550 : Minimap basic
  * 3086471 : Implements Reseach functionnality

Known issues with this release
------------------------------
  * Agent AI is not operational.
  * The minimap is not complete.
  * PathFinding requires improvement
  * Mission debriefing is not operational
  * No animation for trees, windows
  * Map drawing is buggy

History
-------
 v0.4
 ----
  * Minimap drawing is fixed, should be better now
  * Map can be scrolled with arrow keys and scrolling is like original game
  * People, objects will not move to unwalkable surfaces
  * When weapon is dropped while moving, ped will stop moving
  * Static objects: added 4 windows, large doors, added 2 animations
    to doors, 1 animation to trees
  * Static objects animation setup method rewritten,
    animations require adjusting and add new objects correctly
  * While vehicle was moving if ped went out, vehicle continued to move
  * Game time is visible in the Map menu but not fully implemented
  * People and vehicles pathfinding was rewritten
  * Fixed highlights in select menu: was possible to highlight more than
    one element, also weapon highlight was not working
  * Added correct recognition for clicks on scrollable map
  * 3029839 : Mouse position is not used on a new Menu